syntax = "proto3";

package meeting;

service MeetingService {
    rpc Add(AddRequest) returns (AddResponse) {}
    rpc AddRange(AddRangeRequest) returns (AddRangeResponse) {}
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc GetBySourceID(GetBySourceIDRequest) returns (GetResponse) {}
    rpc List(ListRequest) returns (ListResponse) {}
    rpc ListByDate(ListByDateRequest) returns (ListResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Meeting {
    string id = 1;

    string name = 2;
    string country = 3;
    string race_type = 4;
    int64 scheduled_start = 5;
    string source_id = 6;
}

message AddRequest {
    Meeting meeting = 1;
}

message AddResponse {
    bool created = 1;
    Meeting meeting = 2;
}

message AddRangeRequest {
    repeated Meeting meetings = 1;
}

message AddRangeResponse {
    repeated AddResponse response = 1;
}

message GetRequest { 
    string id = 1;
}

message GetBySourceIDRequest { 
    string source_id = 1;
}

message GetResponse {
    Meeting meeting = 1;
}

message ListRequest { }

message ListByDateRequest { 
    string start_date = 1;
    string end_date = 2;
}

message ListResponse {
    repeated Meeting meetings = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    bool deleted = 1;
}